syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService.Server";

package weather;

service  WeatherExtractor {
    rpc GetCurrentWeather(GetCurrentWeatherForCityRequest) returns (WeatherResponse);
    rpc GetCurrentWeatherStream(GetCurrentWeatherForCityRequest) returns (stream WeatherResponse);
    rpc GetMultiCurrentWeatherStream(stream GetCurrentWeatherForCityRequest) returns (MultiWeatherResponse);
}

enum Units {
    Standard = 0;
    Metric = 1;
    Imperial = 2;
}

message GetCurrentWeatherForCityRequest {
    string city = 1;
    Units units = 2;
}

message WeatherResponse {
    double temperature = 1;
    double feels_like = 2;
    google.protobuf.Timestamp timestamp = 3;
    string city = 4;
    Units units = 5;
}

message MultiWeatherResponse {
    repeated WeatherResponse weather = 1;
}